fix: remove security manager properties from script